Adiciona na API mock o endpoint para login usando fone
