# server/controllers/auth.js
@@ -1,16 +1,16 @@
-const data = require("../data");
+const data = require('../data');
 
-function getCartao(phone) {
-  return data.cartoesResumidos.find(cartao => cartao.usuario.fone === phone);
+function getTokenDoUsuario(phone) {
+  return data.tokens.find((token) => token.usuario.fone === phone);
 }
 
 module.exports = {
   find: (req, res) => {
     const { phone } = req.body;
-    const cartao = getCartao(phone);
-    if (cartao == undefined) {
+    const token = getTokenDoUsuario(phone);
+    if (token == undefined) {
       res.status(404).end();
     }
-    res.send({"cartao": cartao});
+    res.send(token);
   }
 };
